# YACLib

./: CMakeLists.txt  README.md  yaclibConfig.cmake.in
.github/workflows/: coverage.yml  macos.yml  sanitizer.yml
include/yaclib/: fwd.hpp
include/yaclib/algo/: wait_group.hpp
include/yaclib/algo/detail/: core.hpp  promise_core.hpp  result_core.hpp  shared_core.hpp  unique_core.hpp
include/yaclib/async/: connect.hpp  contract.hpp  future.hpp  join.hpp  make.hpp  promise.hpp  run.hpp  share.hpp  shared_contract.hpp  shared_future.hpp  shared_promise.hpp  split.hpp  when_all.hpp  when_any.hpp
include/yaclib/async/when/: all.hpp  all_tuple.hpp  any.hpp  join.hpp  when.hpp
include/yaclib/coro/: await.hpp  future.hpp  shared_future.hpp  task.hpp
include/yaclib/coro/detail/: await_awaiter.hpp  promise_type.hpp
include/yaclib/lazy/: make.hpp  schedule.hpp  task.hpp
include/yaclib/util/: result.hpp  type_traits.hpp
include/yaclib/util/detail/: type_traits_impl.hpp
include/yaclib_ext/absl/: status_or.hpp
include/yaclib_ext/std/: expected.hpp
src/: CMakeLists.txt
src/algo/: shared_core.cpp  unique_core.cpp
src/async/: CMakeLists.txt  shared_future_impl.cpp
src/util/: result.cpp
test/: CMakeLists.txt
test/ext/absl/: status_or.cpp
test/ext/std/: expected.cpp
test/unit/algo/: join.cpp  when.cpp  when_all.cpp  when_all_tuple.cpp  when_any.cpp
test/unit/async/: connect.cpp  core_size.cpp  future.cpp  future_inline.cpp  make_future.cpp  make_task.cpp  shared_future.cpp
test/unit/coro/: future_coro_traits.cpp  on.cpp
test/unit/util/: result.cpp
test/util/: async_suite.hpp  error_code.hpp  error_suite.hpp  when_suite.hpp
